--- a/index1.html
+++ b/index1.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Imperative Hello World</title>
+  <title>Declarative Hello World</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="root"></div>
 
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
